--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <!-- PyScript core -->
       <link rel="stylesheet" href="https://pyscript.net/releases/2024.9.1/core.css">
       <script type="module" src="https://pyscript.net/releases/2024.9.1/core.js"></script>
-      <script src="https://cdn.jsdelivr.net/pyodide/v0.28.3/full/pyodide.js"></script>  </head>
+  </head>
   <body>
     <div id="app"></div>
     <script type="module" src="./main.ts"></script>
