--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vite + Vue template</title>
+    <title>PyCAD</title>
     <!-- PyScript core -->
       <link rel="stylesheet" href="https://pyscript.net/releases/2024.9.1/core.css">
       <script type="module" src="https://pyscript.net/releases/2024.9.1/core.js"></script>
