--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>PyCAD</title>
+    <link rel="icon" href="src\renderer\logo.png">
     <!-- PyScript core -->
       <link rel="stylesheet" href="https://pyscript.net/releases/2024.9.1/core.css">
       <script type="module" src="https://pyscript.net/releases/2024.9.1/core.js"></script>
